--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table  cellspacing="20">
         <tr>
-            <td><img src="/image/edit2.jpg" alt="justice profile picture"></td>
+            <td><img src="./image/edit2.jpg" alt="justice profile picture"></td>
             <td> <h1>Justice Agunkejoye.</h1>
                 <p><em>founder of crypto <strong><a href= https://www.bybit.com/en-US/login>best strategy</a></strong>.</em></p>
                 <p>I am a production engineer by profession. I love music and football.</p></td>
